<resources>

    <string name="country_prompt">Part of the Day</string>
    <string-array name="country_arrays">
        <item>Morning</item>
        <item>Evening</item>
    </string-array>


    <string name="app_name">Farm</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_homepage">Home</string>
    <string name="amount">Amount</string>
    <string name="category_discription">Description..</string>
    <string name="datepicker">Date</string>
    <string name="age">How many years old..</string>
    <string name="title_whatsapp">Calendar</string>

    <string name="state_prompt">Choose Job Site</string>


    <string name="title_facebook">Reports</string>
    <string name="addInvest">Add Transaction</string>
    <string name="removeInvest">Home</string>
    <string name="add_milk">Add Milk</string>


    //menu
    <string name="memeber">Members</string>
    <string name="Cattles">Cattles</string>
    <string name="wages">Daily Wages</string>
    <string name="milk">Milk</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Home fragment1</string>
    <string name="hello_blank_fragment2">I am under Construction2</string>
    <string name="hello_blank_fragment3">I am under Construction3</string>
    <string name="hello_blank_fragment4">I am under Construction4</string>
    <string name="title_activity_add_animal_details">addAnimalDetails</string>
    <string name="title_activity_simpletesting">simpletesting</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">LogOut</string>


</resources>


