<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/calendar"
        android:title="@string/title_calendar"/>
    <!--<item-->
        <!--android:id="@+id/navigation_whatsappicone"-->
        <!--android:icon="@drawable/ic_action_whatsappicone"-->
        <!--android:title="@string/title_whatsapp" />-->
    <!--<item-->
        <!--android:id="@+id/navigation_facebook"-->
        <!--android:icon="@drawable/facebookicon"-->
        <!--android:title="@string/title_facebook" />-->







</menu>
