<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:orientation="vertical">
    
    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="40dp">
    </Spinner>

<Spinner
    android:id="@+id/units"
    android:layout_marginTop="10dp"
    android:layout_below="@+id/category"
    android:layout_width="match_parent"
    android:layout_height="40dp">
    </Spinner>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <EditText
        android:hint="@string/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:numeric="integer"/>

    <EditText
        android:hint="@string/category_discription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <EditText
        android:hint="@string/datepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:layout_marginTop="10dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"/>
</LinearLayout>
</LinearLayout>
